--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             };
             
             window.jsi_config = jsi_config;
+            console.log('1')
         })()
     </script>
     
